# corax_arcana

./: .gitignore  LICENSE  README.md  pyproject.toml
data/exploration/: cards_analysis.json  catalog_card_names_analysis.json  catalog_colors_analysis.json  catalog_creature_types_analysis.json  catalog_supertypes_analysis.json  sets_analysis.json
notebooks/: api_explorer.py
scripts/: test_environment.py
