[project]
name = "corax-arcana"
version = "0.1.0"
description = "Projeto de Engenharia de Dados para coleta e tratamento dos dados voltado para o card game Magic: The Gathering"
authors = [
    {name = "Leonardo",email = "leonardojpoletti@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "duckdb (>=1.3.1,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
